# immune_homologues

./: .gitignore  EDA.ipynb  SANS_parser.py  add_orthologs.py  add_paralogs.py  double_graph_processing.sh  kill_processing.sh  paralogs_finder.R  pyproject.toml  readme.txt  requirements.txt  response.txt  sample_graph.py  single_graph_processing.sh  string-db.ipynb  string_db_combined_graph.py  string_db_fetch.py  string_db_parser.py  string_db_parser_double.py  string_db_parser_single.py
Input_data/: protein_set.txt
Input_data/string-db/: ZC3HAV1_NPM1.tsv
Temporary_files/string_db/: APCS_IGJ.tsv  APCS_NPM1.tsv  APCS_NPM2.tsv  APCS_PARP12.tsv  APCS_PTX3.tsv  APCS_PTX4.tsv  APCS_ZC3HAV1.tsv  CRP_APCS.tsv  CRP_IGJ.tsv  CRP_NPM1.tsv  CRP_NPM2.tsv  CRP_PARP12.tsv  CRP_PTX3.tsv  CRP_PTX4.tsv  CRP_ZC3HAV1.tsv  IGJ_NPM1.tsv  IGJ_NPM2.tsv  IGJ_PARP12.tsv  IGJ_ZC3HAV1.tsv  NPM2_NPM1.tsv  PARP12_NPM1.tsv  PARP12_NPM2.tsv  PARP12_ZC3HAV1.tsv  PTX3_IGJ.tsv  PTX3_NPM1.tsv  PTX3_NPM2.tsv  PTX3_PARP12.tsv  PTX3_PTX4.tsv  PTX3_ZC3HAV1.tsv  PTX4_IGJ.tsv  PTX4_NPM1.tsv  PTX4_NPM2.tsv  PTX4_PARP12.tsv  PTX4_ZC3HAV1.tsv  ZC3HAV1_NPM1.tsv  ZC3HAV1_NPM2.tsv
